fixed color theme for highcontrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,21 +14,21 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-html.contrast,
-body.contrast {
-  background-color: #000 !important;
-  color: #fff !important;
-}
-
 body.contrast .functions-bar {
-  background-color: #000 !important;
+  background-color: #000000 !important;
   color: #ffff00 !important;
 }
 
 body.contrast .navbar,
 body.contrast .footer {
-  background-color: #000 !important;
+  background-color: #1a1a1a!important;
   color: #ffffff !important;
+}
+
+html.contrast,
+body.contrast {
+  background-color: #262626!important;
+  color: #fff !important;
 }
 
 body.contrast a,
